--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-11 11:52:44 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-11 15:10:52 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{ans,
+	Author = {A.N.S. Institute},
+	Date-Added = {2015-11-11 14:01:28 +0000},
+	Date-Modified = {2015-11-11 14:10:48 +0000},
+	Institution = {Laser Institute of America},
+	Title = {American National Standard for Safe Use of Lasers: ANSI Z 136.1},
+	Year = {2007}}
 
 @book{kasap2012optoelectronics,
 	Author = {Kasap, Safa O},
