add cap 2 incomplete

--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,12 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-11 15:10:52 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-11 17:39:34 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{1070479,
+	Author = {Lang, R. and Kobayashi, K.},
+	Date-Added = {2015-11-11 16:39:06 +0000},
+	Date-Modified = {2015-11-11 16:39:06 +0000},
+	Doi = {10.1109/JQE.1980.1070479},
+	Issn = {0018-9197},
+	Journal = {Quantum Electronics, IEEE Journal of},
+	Keywords = {Feedback systems;Semiconductor lasers;Diode lasers;Fabry-Perot;Hysteresis;Laser feedback;Laser modes;Laser noise;Optical feedback;Output feedback;Semiconductor diodes;Semiconductor lasers},
+	Month = {Mar},
+	Number = {3},
+	Pages = {347-355},
+	Title = {External optical feedback effects on semiconductor injection laser properties},
+	Volume = {16},
+	Year = {1980},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/JQE.1980.1070479}}
+
+@book{sensmeslaser,
+	Author = {S. Donati},
+	Date-Added = {2015-11-11 15:42:26 +0000},
+	Date-Modified = {2015-11-11 15:43:29 +0000},
+	Publisher = {Prentice Hall},
+	Title = {Electro-Optical Instrumentation: Sensing and Measuring with Lasers},
+	Year = {2003}}
 
 @techreport{ans,
 	Author = {A.N.S. Institute},
@@ -49,3 +73,15 @@
 	Volume = {31},
 	Year = {1995},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1109/3.341714}}
+
+@article{1464-4258-4-6-371,
+	Abstract = {The laser diode self-mixing (or feedback) interferometric technique is reviewed as a general tool for remote sensing applications. The operating principle is outlined, and the attainable performance is compared to conventional coherent detection. Applications to metrology and to new sensing schemes are described, experimental results are reported and the overall performance of the sensors are assessed.},
+	Author = {Guido Giuliani and Michele Norgia and Silvano Donati and Thierry Bosch},
+	Journal = {Journal of Optics A: Pure and Applied Optics},
+	Number = {6},
+	Pages = {S283},
+	Title = {Laser diode self-mixing technique for sensing applications},
+	Url = {http://stacks.iop.org/1464-4258/4/i=6/a=371},
+	Volume = {4},
+	Year = {2002},
+	Bdsk-Url-1 = {http://stacks.iop.org/1464-4258/4/i=6/a=371}}
