--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -10,6 +10,7 @@
 \usepackage{fancyhdr}  
 \usepackage[scriptsize]{caption} 
 \usepackage{siunitx}
+\usepackage{gensymb}
 \DeclareSIUnit{\EUR}{\text{\euro}}
 \hyphenation{a-gen-tiz-za-zio-ne}
 
